[package]
name = "lua-sys"
version = "0.1.0"
license = "MPL-2.0"
description = "Raw FFI bindings to Lua."
keywords = ["lua", "ffi", "bindings"]
authors = ["Severen Redwood <severen@shrike.me>"]
build = "build.rs"

#readme = "README.adoc"
homepage = "https://github.com/SShrike/moon/tree/master/lua-sys"
documentation = "https://docs.rs/lua-sys"

[dependencies]
libc = "^0.2.0"

[build-dependencies]
metadeps = "^1.1.0"
bindgen = { version = "^0.22.0", optional = true }

[package.metadata.pkg-config]
# https://www.lua.org/versions.html#numbering
lua = "5.3"

[features]
default = ["compile-time"]
compile-time = ["bindgen"] # Generate the bindings at compile time.
